Also include categories in Ledger's accounts list

BUG: 403196